<resources>
    <string name="app_name">Erraya</string>
    <string name="constant_profile_ranking">Profile Ranking</string>
    <string name="constant_profile_matched">Profile Matched</string>
    <string name="text_total_impression">Total Impression</string>
    <string name="text_your_current_rating">Your Current Rating</string>
    <string name="image_view_description">Image View Description</string>
    <string name="text_number_of_blocks">Number of blocks</string>
    <string name="text_info1_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ipsum sapien eu nisi, luctus at.</string>
    <string name="text_next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_get_started">Get Started</string>
    <string name="welcome_to_loremipsum">Welcome to Loremipsum</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="i_agree_with_the_terms_and_conditions">I agree with the terms and conditions</string>
    <string name="text_continue">Continue</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="dashed_line">_ _ _ _</string>
    <string name="tell_us_your_name">Tell us your name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="when_is_your_birthday">When is your birthday?</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="how_do_you_identify">How do you identify?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="this_view_is_under_construction">This view is under construction</string>
    <string name="add_your_photos">Add your photos</string>
    <string name="select_your_interest">Select your interest</string>
    <string name="choose_a_mode">Choose a mode</string>
    <string name="label_home">Home</string>
    <string name="message">Message</string>
    <string name="label_insights">Insights</string>
    <string name="label_profile">Profile</string>
    <string name="hint_search">Search</string>
    <string name="text_new_matches">New Matches</string>
    <string name="text_message">Message</string>
    <string name="text_view_all">View All</string>
    <string name="mark_jacobs_25">Mark Jacobs, 25</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_subscription">My Subscription</string>
    <string name="para">Lorem ipsum dolor sit amet, consectetur risus aucto adipiscing elit.</string>
    <string name="match_status">12 Matches Left</string>
    <string name="button_text_renew">Renew</string>
    <string name="button_text_upgrade">Upgrade</string>
    <string name="text_subscribe">Subscribe</string>
    <string name="title_notification">Notification</string>
    <string name="title_preference">Preferences</string>
    <string name="text_profile_name">Maya</string>
    <string name="title_map">Map</string>
    <string name="hint_send">Type your message</string>
    <string name="button_send_caption">SEND</string>
    <string name="chat_window_sample_name">Megha</string>
    <string name="chat_experience_placeholder">How was your experience with Chat Person?</string>
    <string name="text_info_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ipsum sapien eu nisi, luctus at. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ipsum sapien eu nisi, luctus at. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ipsum sapien eu nisi, luctus at. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ipsum sapien eu nisi, luctus at.</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="text_my_basic_info">My Basic Info</string>
    <string name="title_subscribe">Subscribe</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="text_paytm">Paytm</string>
    <string name="text_upi">UPI</string>
    <string name="text_credit_debit_card">Credit/Debit Card</string>
    <string name="text_profile_settings">Profile Settings</string>
    <string name="title_settings">Settings</string>
    <string name="text_current_location">Current Location</string>
    <string name="text_logout">Logout</string>
    <string name="title_delete_account">Delete Account</string>
    <string name="dummy_text">Lorem ipsum dolor sit</string>
    <string name="hint_enter_email_address">Enter email address</string>
    <string name="text_89">89%</string>
    <string name="joined_in_january_2020">Joined in January 2020</string>
    <string name="hi_i_m_mark_jacobs">Hi, I\'m Mark Jacobs</string>
    <string name="location">Location</string>
    <string name="about_me">About Me</string>
    <string name="text_my_interest">My Interest</string>
    <string name="text_bangalore">Bangalore</string>
    <string name="profile_loading_info">Getting your profile info…</string>
    <string name="text_account_settings">Account Settings</string>
    <string name="hint_interest">Interest</string>
    <string name="text_age">Age</string>
    <string name="text_distance">Distance</string>
    <string name="text_1kms">1Kms</string>
    <string name="text_50kms">50Kms</string>
    <string name="text_work">Work</string>
    <string name="text_show_me">Show Me</string>
    <string name="text_flames">Flames</string>
    <string name="view_percentage_matrix"><u>View Percentage Matrix</u></string>
    <string name="text_report_profile">Report Profile</string>

</resources>