<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.home.FragmentViewProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:orientation="vertical">

        <include
            layout="@layout/item_view_profile"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:text="@string/hi_i_m_mark_jacobs"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textJoinedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/joined_in_january_2020" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="#D1D1D1"
                app:cardCornerRadius="14dp"
                android:elevation="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/text_89"
                    android:textColor="?colorSecondary"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.6"
                android:contentDescription="@string/image_view_description"
                android:src="@drawable/ic_map"
                app:tint="?colorOnPrimary" />

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:alpha="0.6"
                android:text="@string/text_bangalore"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableTint="?colorOnPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/about_me" />

        <TextView
            android:id="@+id/textAboutMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:alpha="0.6"
            android:text="@string/para" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_my_basic_info" />

        <com.notocia.erraya.uicomponents.InfoWidget
            android:id="@+id/basicInfoWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:iconTint="?colorOnPrimary"
            app:showIcon="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_my_interest" />

        <com.notocia.erraya.uicomponents.InfoWidget
            android:id="@+id/interestInfoWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            app:iconTint="?colorOnPrimary"
            app:showIcon="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_flames" />

        <club.cred.synth.views.PitView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:neuCornerRadius="@dimen/pit_corner_radius"
            app:pitDepth="@dimen/pit_depth"
            app:pitViewAppearance="@style/Theme.Erraya.PitView" />

        <TextView
            android:id="@+id/linkPercentageMatrix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:textColor="?colorSecondary"
            android:text="@string/view_percentage_matrix"/>

        <LinearLayout
            android:id="@+id/controlsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_share_round"
                android:contentDescription="@string/image_view_description"/>
            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_flame"
                android:contentDescription="@string/image_view_description"/>
            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_heart"
                android:contentDescription="@string/image_view_description"/>
            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_reject"
                android:contentDescription="@string/image_view_description"/>
        </LinearLayout>

        <club.cred.synth.views.SynthButton
            android:id="@+id/buttonContinue"
            android:layout_width="140dp"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="14dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/text_report_profile"
            android:textColor="?colorSecondary"
            app:neuButtonRadius="23dp"
            app:neuButtonType="elevated_soft"
            app:neuPlatformAppearance="@style/SynthButtonSoft"
            app:neuPlatformColor="?colorPrimary" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>