<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:fillViewport="true"
    tools:context="com.notocia.erraya.fragments.DatingModeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:clipChildren="false">


        <TextView
            android:id="@+id/textView3"
            style="@style/Theme.Erraya.header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:maxWidth="252dp"
            android:text="@string/choose_a_mode"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins_light"
            android:maxWidth="252dp"
            android:text="@string/text_info1_para"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <com.notocia.erraya.uicomponents.DatingMode
            android:id="@+id/datingMode"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <club.cred.synth.views.SynthButton
            android:id="@+id/buttonContinue"
            android:layout_width="140dp"
            android:layout_height="41dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:drawablePadding="14dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/text_continue"
            android:textColor="@color/copper_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:neuButtonRadius="23dp"
            app:neuButtonType="elevated_soft"
            app:neuPlatformAppearance="@style/SynthButtonSoft"
            app:neuPlatformColor="@color/synth_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
